// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentHeader component should renders html correctly with subtitle and no title 1`] = `
<PageHeader
  backIcon={
    <Icon
      type="arrow-left"
    />
  }
  className="content-header"
  subTitle="Subtítulo"
  title=""
/>
`;

exports[`ContentHeader component should renders html correctly with title and no subtitle 1`] = `
<PageHeader
  backIcon={
    <Icon
      type="arrow-left"
    />
  }
  className="content-header"
  subTitle=""
  title="Título"
/>
`;

exports[`ContentHeader component should renders html correctly with title and subtitle 1`] = `
<PageHeader
  backIcon={
    <Icon
      type="arrow-left"
    />
  }
  className="content-header"
  subTitle="Subtítulo"
  title="Título"
/>
`;

exports[`ContentHeader component should renders html correctly without title and subtitle 1`] = `
<PageHeader
  backIcon={
    <Icon
      type="arrow-left"
    />
  }
  className="content-header"
  subTitle=""
  title=""
/>
`;
